Made design mobile friendly. Fixed various issues with a push panel. Fixed layout issues. Fixed overall website elements style.

--- a/css/common.scss
+++ b/css/common.scss
@@ -18,6 +18,7 @@ $font-xs-size : 14px;
 $font-tiny-size : 12px;
 $font-copyrights-size : 12px;
 $max-width: 90%;  //for items-section
+$push-width: 350px;
 
 .modal {
   border-radius: 0;
@@ -255,17 +256,56 @@ footer{
 
 .pushy{
   background: $col-charcoal;
+  visibility: collapse;
+  position: fixed;
+  width: $push-width;
+  height: 100%;
+  top: 0;
+  z-index: 9999;
+  font-size: 0.9em;
+  font-weight: bold;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
   .wrapper{
-    //padding-right: 20px;
+    height: 100%;
     .header{
       background: $col-charcoal;
       padding: 30px 0px;
+      margin: 10px 0px;
       color: white;
+      position: relative;
+      i{
+        color: white;
+        position:absolute;
+        right: 10%;
+        top: 30px;
+        cursor: pointer;
+
+        &:before{
+          transition:all .3s;
+          -ms-transform:rotate(180deg);
+          -webkit-transform:rotate(180deg);
+          transform:rotate(180deg);
+        }
+      }
+      i.rotate:before{
+        -moz-transition:all .5s .1s;
+        -o-transition:all .5s .1s;
+        -webkit-transition:all .5s;
+        -webkit-transition-delay:.1s;
+        transition:all .5s .1s;
+        -ms-transform:rotate(360deg);
+        -webkit-transform:rotate(360deg);
+        transform:rotate(360deg);
+      }
     }
+
     .cart-insides{
       list-style-type: none;
       padding: 0;
       background: $col-backg-main;
+      height:70%;
+      overflow: auto;
       .cart-item{
         position: relative;
         border-bottom: 1px solid rgba(0, 0, 0, .1);
@@ -307,7 +347,192 @@ footer{
       font-family: $font-main;
     }
   } //wrapper
+  a{
+      display: inline-block;
+      padding: 15px 30px;
+      text-decoration: none;
+  }
 }
+
+.pushy-left{
+    -webkit-transform: translate3d(-$push-width,0,0);
+    -moz-transform: translate3d(-$push-width,0,0);
+    -ms-transform: translate3d(-$push-width,0,0);
+    -o-transform: translate3d(-$push-width,0,0);
+    transform: translate3d(-$push-width,0,0);
+}
+
+.pushy-open{
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    -o-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+}
+
+.container-push, .push-push{
+    -webkit-transform: translate3d($push-width,0,0);
+    -moz-transform: translate3d($push-width,0,0);
+    -ms-transform: translate3d($push-width,0,0);
+    -o-transform: translate3d($push-width,0,0);
+    transform: translate3d($push-width,0,0);
+}
+
+.pushy, #container, .push{
+    -webkit-transition: -webkit-transform .2s cubic-bezier(.16, .68, .43, .99);
+    -moz-transition: -moz-transform .2s cubic-bezier(.16, .68, .43, .99);
+    -o-transition: -o-transform .2s cubic-bezier(.16, .68, .43, .99);
+    transition: transform .2s cubic-bezier(.16, .68, .43, .99);
+}
+
+.pushy::-webkit-scrollbar {
+  display: none;
+}
+
+.site-overlay{
+    display: none;
+}
+
+.pushy-active .site-overlay{
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9998;
+    background-color: rgba(0,0,0,0.5);
+    -webkit-animation: fade 500ms;
+    -moz-animation: fade 500ms;
+    -o-animation: fade 500ms;
+    animation: fade 500ms;
+}
+
+@keyframes fade{
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@-moz-keyframes fade{
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@-webkit-keyframes fade{
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@-o-keyframes fade{
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+/* Example Media Query */
+@media screen and (min-height:800px) and (orientation:landscape) {
+  .pushy{
+      width: 350px;
+      .wrapper{
+        .cart-insides{
+          height: 70%;
+        }
+      }
+  }
+}
+
+@media screen and (max-height:799px) and (orientation:landscape) {
+  .pushy{
+      width: 350px;
+      .wrapper{
+        .header{
+          padding: 10px;
+          margin: 5px 0px 5px 0px;
+          i{
+            top: 12px;
+          }
+        }
+        .cart-insides{
+          height: 70%;
+        }
+      }
+  }
+}
+
+@media screen and (max-height:599px) and (orientation:landscape) {
+    .pushy{
+        display: none;
+    }
+
+    .site-overlay{
+      display:none;
+    }
+}
+
+
+@media screen and (min-width: 768px) and (min-height:1000px){
+  .pushy{
+    .wrapper{
+      .cart-insides{
+        height: 75%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 414px) and (orientation:portrait) {
+    .pushy{
+        width: 350px;
+        .wrapper{
+          .header{
+            padding: 10px;
+            margin: 5px 0px 5px 0px;
+            i{
+              top: 12px;
+            }
+          }
+          .cart-insides{
+            height: 70%;
+          }
+        }
+    }
+}
+
+@media screen and (max-width: 385px) and (orientation:portrait) {
+    .pushy{
+        width: 300px;
+        .wrapper{
+          .header{
+            padding: 10px;
+            margin: 5px 0px 5px 0px;
+            i{
+              top: 12px;
+            }
+          }
+          .cart-insides{
+            height: 65%;
+          }
+        }
+    }
+}
+
+@media screen and (max-width: 320px) and (orientation:portrait){
+    .pushy{
+        width: 270px;
+        .wrapper{
+          .header{
+            padding: 10px;
+            margin: 5px 0px 5px 0px;
+            i{
+              top: 12px;
+            }
+          }
+          .cart-insides{
+            height: 60%;
+          }
+        }
+    }
+}
+
 
 //Hover .css classes overriding
 .hvr-ripple-out{
