--- a/css/index.scss
+++ b/css/index.scss
@@ -14,7 +14,7 @@ main{
               }
               button{
                 position:relative;
-                top: -2px;
+                top: -1px;
               }
             } //form-group
           } //form
@@ -111,6 +111,7 @@ main{
                   color: #66BB6A;
                   border-radius: 0;
                   padding: 5px 6px;
+                  border-radius: 5px;
                 }
               } //btn-toCart
             } //info
